realizando cambios para mejorar los estilos del sitio web en desktop y agregar imagenes al carousel

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,9 +11,10 @@
     <link rel="shortcut icon" href="images/favicon.png">
     <script src="https://kit.fontawesome.com/6235acc874.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
 
-<!------------HEADER -------------- -->
+    <!------------HEADER -------------- -->
     <header>
         <div class="logo-menu">
             <div class="container">
@@ -34,10 +36,10 @@
             </div>
         </div>
     </header>
-<!------------END HEADER -------------- -->
+    <!------------END HEADER -------------- -->
 
 
-<!------------MAIN SECTION-------------- -->
+    <!------------MAIN SECTION-------------- -->
     <main class="main">
         <div class="container">
             <div class="row">
@@ -49,24 +51,26 @@
                     <p>Peluquería canina, atención personalizada para tu perrito.
                         Lo bañamos, le cortamos el pelo y lo dejamos hermose!
                     </p>
-                    <a href="https://wa.me/5491140825987?text=Hola,%20quería%20pedirte%20un%20turno%20de%20la%20peluquería" class="btn" target="_blank">
+                    <a href="https://wa.me/5491140825987?text=Hola,%20quería%20pedirte%20un%20turno%20de%20la%20peluquería"
+                        class="btn" target="_blank">
                         <span>Agendá tu turno acá</span>
                     </a>
                 </div>
             </div>
         </div>
     </main>
-<!------------END MAIN SECTION-------------- -->
+    <!------------END MAIN SECTION-------------- -->
 
-<!------------SERVICES -------------- -->
+    <!------------SERVICES -------------- -->
     <section class="services" id="servicios">
         <div class="container">
             <h2 class="services__title">Servicios</h2>
-            <p class="services__intro">Mi nombre es Marcela soy peluquera canina, con mucho amor por las mascotas. <br/>
-                Me encuentro en la zona de Don Torcuato - Tigre. <br/> <br/>
-                
+            <p class="services__intro">Mi nombre es Marcela soy peluquera canina, con mucho amor por las mascotas.
+                <br />
+                Me encuentro en la zona de Don Torcuato - Tigre. <br /> <br />
+
                 Desde ya les agradezco mucho por confiarme siempre a sus mascotas!!!
-             </p>
+            </p>
             <div class="row">
                 <div class="col services_details">
                     <h2>Baño y cepillado</h2>
@@ -96,33 +100,36 @@
             </div>
         </div>
     </section>
-<!------------END SERVICES -------------- -->
+    <!------------END SERVICES -------------- -->
 
-<!------------CLIENTS -------------- -->
+    <!------------CLIENTS -------------- -->
     <section class="clients" id="clientes">
         <div class="container">
             <h2 class="services__title">Los clientes ❤</h2>
-            <p class="services__intro">Como todos sabemos clientes bañados y lindos <br/>
-                Son clientes felices!! <br/>
-             </p>
+            <p class="services__intro">Como todos sabemos clientes bañados y lindos <br />
+                Son clientes felices!! <br />
+            </p>
             <div class="row">
                 <div class="gallery js-flickity">
                     <div class="gallery-cell">
-                        <img src="./images/carousel/IMG_20200313_221343126.jpg" alt="">
+                        <img src="./images/carousel/dog4.jpg" alt="">
                     </div>
                     <div class="gallery-cell">
-                        <img src="./images/carousel/IMG_20200313_221343126.jpg" alt="">
+                        <img src="./images/carousel/dog1.jpeg" alt="">
                     </div>
                     <div class="gallery-cell">
-                        <img src="./images/carousel/IMG_20200313_221343126.jpg" alt="">
+                        <img src="./images/carousel/dog2.jpeg" alt="">
+                    </div>
+                    <div class="gallery-cell">
+                        <img src="./images/carousel/dog3.jpeg" alt="">
                     </div>
                 </div>
             </div>
         </div>
     </section>
-<!------------END SERVICES -------------- -->
+    <!------------END SERVICES -------------- -->
 
-<!------------CONTACT -------------- -->
+    <!------------CONTACT -------------- -->
 
     <section class="contact" id="contacto">
         <div class="container">
@@ -137,7 +144,8 @@
                         <strong><i class="fab fa-facebook"></i> Facebook</strong>
                         <span>Marcela Moreno</span>
                     </a>
-                    <a href="https://wa.me/5491140825987?text=Hola,%20quería%20pedirte%20un%20turno%20de%20la%20peluquería" target="_blank">
+                    <a href="https://wa.me/5491140825987?text=Hola,%20quería%20pedirte%20un%20turno%20de%20la%20peluquería"
+                        target="_blank">
                         <strong><i class="fab fa-whatsapp-square"></i> whatsapp</strong>
                         <span>11 4082 5987</span>
                     </a>
@@ -146,11 +154,13 @@
         </div>
     </section>
 
-<!------------END CONTACT -------------- -->
-<footer>
-    <p><span>Web desarrollada por Omar Dario Melendrez |</span> <span><i class="far fa-envelope"></i> melendrezomar2@gmail.com</span></p>
-</footer>
+    <!------------END CONTACT -------------- -->
+    <footer>
+        <p><span>Web desarrollada por Omar Dario Melendrez |</span> <span><i class="far fa-envelope"></i>
+                melendrezomar2@gmail.com</span></p>
+    </footer>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/flickity/1.0.0/flickity.pkgd.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flickity/1.0.0/flickity.pkgd.js"></script>
 </body>
+
 </html>
